--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,3 +16,13 @@ en:
     formats:
       short: "%b %d, %Y"
 
+  activerecord:
+    models:
+      appointment: Appointment
+    attributes:
+      appointment:
+        doctor_profile_id: Doctor
+        patient_profile_id: Patient
+        apppointment_at: Date
+        clinic: Clinic
+        purpose: Purpose
