--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,14 +16,29 @@ en:
     formats:
       short: "%b %d, %Y"
   appointments:
+    empty_state: No Appointments Scheduled
     form:
       submit: Book
+  notes:
+    empty_state: No Notes Shared
   activerecord:
     models:
       appointment: Appointment
+      doctor_profile: Doctor
+      patient_profile: Patient
+      notes: Note
     attributes:
+      patient_profile:
+        first_name: First Name
+        last_name: Surname
+        Email: Email Address
+        phone_number: Phone Number
+        date_of_birth: Date of Birth
+        age: Age
+        starting_weight: Weight (Starting)
+        goal_weight: Weight (Goal)
+        height_in_inches: Height (Inches)
       appointment:
-        doctor_profile: Doctor
         doctor_profile_id: Doctor
         patient_profile_id: Patient
         apppointment_at: Date
